@@ -1,5 +1,7 @@
 Version 3.3.1-devel
 -------------------
+- New unaligned_access.h header providing several methods for loading
+  and storing values using unaligned pointers.
 - Fix unaligned loads in binary_decoder and pointer_decoder.
 - Make UndefinedBehaviourSanitizer happy in compressor_save.cpp.
 
